--- a/Ludum Dare 29/Ludum Dare 29.vcxproj.filters
+++ b/Ludum Dare 29/Ludum Dare 29.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClInclude Include="Player.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="RandomAi.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -79,6 +82,9 @@
     </ClCompile>
     <ClCompile Include="Player.cpp">
       <Filter>Header Files</Filter>
+    </ClCompile>
+    <ClCompile Include="RandomAi.cpp">
+      <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
